--- a/kernel_module/src/Makefile
+++ b/kernel_module/src/Makefile
@@ -1,11 +1,9 @@
-EXTRA_CFLAGS += -I/usr/src/linux-headers-4.9.337-tegra-ubuntu18.04_aarch64
+EXTRA_CFLAGS += -I/usr/src/linux-headers-4.9.337-tegra-ubuntu18.04_aarch64/kernel-4.9/include
 
 obj-m += kernel_module.o
 
 all:
-	make -C /usr/src/linux-headers-4.9.337-tegra-ubuntu18.04_aarch64 M=$(PWD) modules
+    make -C /usr/src/linux-headers-4.9.337-tegra-ubuntu18.04_aarch64/kernel-4.9 M=$(PWD) modules
 
 clean:
-	make -C /usr/src/linux-headers-4.9.337-tegra-ubuntu18.04_aarch64 M=$(PWD) clean
-
-
+    make -C /usr/src/linux-headers-4.9.337-tegra-ubuntu18.04_aarch64/kernel-4.9 M=$(PWD) clean
