--- a/cuda_module/src/Makefile
+++ b/cuda_module/src/Makefile
@@ -1,4 +1,4 @@
-obj-m += modify_image_module.o
+obj-m += gpu_kernel_module.o
 
 KERNEL_DIR := /usr/src/linux-headers-4.9.337-tegra-ubuntu18.04_aarch64/kernel-4.9/
 
