wip: more makefile edits

--- a/cuda_module/src/Makefile
+++ b/cuda_module/src/Makefile
@@ -1,12 +1,9 @@
+EXTRA_CFLAGS += -I/usr/src/linux-headers-4.9.140-tegra-ubuntu18.04_aarch64/kernel-4.9/include -I/usr/local/cuda-10.2/targets/aarch64-linux/include
+
 obj-m += gpu_kernel_module.o
 
-KERNEL_DIR := /usr/src/linux-headers-4.9.337-tegra-ubuntu18.04_aarch64/kernel-4.9/
-CUDA_DIR := /usr/local/cuda
-
 all:
-	make -C $(KERNEL_DIR) M=$(PWD) modules
-	$(CUDA_DIR)/bin/nvcc -c -o cuda_kernel.o cuda_kernel.cu -I$(CUDA_DIR)/include -L$(CUDA_DIR)/lib64 -lcudart -Xcompiler -fPIC
-
+	make -C /usr/src/linux-headers-4.9.140-tegra-ubuntu18.04_aarch64/kernel-4.9 M=$(PWD) modules
 clean:
-	make -C $(KERNEL_DIR) M=$(PWD) clean
-	rm -f gpu_kernel_module *.o
+	make -C /usr/src/linux-headers-4.9.140-tegra-ubuntu18.04_aarch64/kernel-4.9 M=$(PWD) clean
+
