wip: more makefile edits

--- a/cuda_module/src/Makefile
+++ b/cuda_module/src/Makefile
@@ -1,4 +1,4 @@
-EXTRA_CFLAGS += -I/usr/src/linux-headers-4.9.337-tegra-ubuntu18.04_aarch64/kernel-4.9/include -I/usr/local/cuda-10.2/targets/aarch64-linux/include
+EXTRA_CFLAGS += -I/usr/src/linux-headers-4.9.337-tegra-ubuntu18.04_aarch64/kernel-4.9/include -I/usr/local/cuda-10.2/targets/aarch64-linux/include -I/usr/src/linux-headers-4.15.0-20/include
 
 obj-m += gpu_kernel_module.o
 
